--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f4f4f4;
+    background-color: #D6F5F1;
 }
 
 h1 {
